--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ bUseUnsortedMenus=False
 [DetailCustomWidgetExpansion]
 CardPlayer_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
 SkeletalMeshComponent=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
-PropertyWrapper=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
+PropertyWrapper=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Blueprint=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Interact.Interact
 InputAction=
@@ -179,11 +179,12 @@ MaterialInstanceConstant=
 K2Node_EnhancedInputAction=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeSpatialHash=
-Gameplay_Screen_1_Player_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
-K2Node_VariableGet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
-Settings_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
-Main_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
-K2Node_VariableSet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision
+Gameplay_Screen_1_Player_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_VariableGet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+Settings_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+Main_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_VariableSet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -191,11 +192,16 @@ LastLevel=/Engine/Maps/Templates/OpenWorld
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -213,23 +219,28 @@ OpenAssetsAtExit=/Game/UI/Settings_Menu.Settings_Menu
 OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/UI_Assets/Slider_Button
-MRUItem1=/Game/CardPlayer
-MRUItem2=/Game/UI/Main_Menu
-MRUItem3=/Game/UI/Settings_Menu
-MRUItem4=/Game/UI/Gameplay_Screen_1_Player
-MRUItem5=/Game/Untitled
-MRUItem6=/Game/UI/UI_Assets/Card_UI_Icon
-MRUItem7=/Game/UI/UI_Assets/Pause_Button
-MRUItem8=/Game/UI/UI_Assets/Gameplay_Background_v6
-MRUItem9=/Game/INputs
-MRUItem10=/Game/Interact
-MRUItem11=/Game/Materials/red
-MRUItem12=/Game/Materials/ColourBase
-MRUItem13=/Game/CardType
-MRUItem14=/Game/CardGM
-MRUItem15=/Game/Card
-MRUItem16=/Game/NewPaperSprite
+MRUItem0=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem1=/Game/UI/Game_Mode_Data/Difficulty
+MRUItem2=/Game/UI/Game_Mode_Data/Players
+MRUItem3=/Game/UI/Game_Mode_Data/Gamemode
+MRUItem4=/Game/UI/Settings_Menu_Title
+MRUItem5=/Game/UI/Main_Menu
+MRUItem6=/Game/UI/Settings_Menu
+MRUItem7=/Game/UI/Gameplay_Screen_1_Player
+MRUItem8=/Game/UI/UI_Assets/Slider_Button
+MRUItem9=/Game/CardPlayer
+MRUItem10=/Game/Untitled
+MRUItem11=/Game/UI/UI_Assets/Card_UI_Icon
+MRUItem12=/Game/UI/UI_Assets/Pause_Button
+MRUItem13=/Game/UI/UI_Assets/Gameplay_Background_v6
+MRUItem14=/Game/INputs
+MRUItem15=/Game/Interact
+MRUItem16=/Game/Materials/red
+MRUItem17=/Game/Materials/ColourBase
+MRUItem18=/Game/CardType
+MRUItem19=/Game/CardGM
+MRUItem20=/Game/Card
+MRUItem21=/Game/NewPaperSprite
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -531,6 +542,7 @@ WorldSettings.Networking=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -559,7 +571,7 @@ TextBlock.Accessibility=True
 TextBlock.Performance=True
 TextBlock.Wrapping=True
 TextBlock.Behavior=True
-TextBlock.Render Transform=True
+TextBlock.Render Transform=False
 TextBlock.Rendering=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
@@ -659,7 +671,24 @@ Settings_Menu_C.Rendering=True
 Settings_Menu_C.Navigation=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
-Texture2D.Interchange =True
+TextBlock.Clipping=True
+Settings_Menu_Title_C.Appearance=True
+Settings_Menu_Title_C.Input=True
+Settings_Menu_Title_C.Interaction=True
+Settings_Menu_Title_C.Designer=True
+Settings_Menu_Title_C.Performance=True
+Settings_Menu_Title_C.Layout=True
+Settings_Menu_Title_C.Behavior=True
+Settings_Menu_Title_C.Render Transform=True
+Settings_Menu_Title_C.Localization=True
+Settings_Menu_Title_C.Accessibility=True
+Settings_Menu_Title_C.Rendering=True
+Settings_Menu_Title_C.Navigation=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+Main_Menu_C.Default=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -694,7 +723,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/UI/Game_Mode_Data
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -746,25 +775,26 @@ Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.Ligh
 Texture2D="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
-CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" "
-HorizontalBox="\"Object\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" "
+CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 Gameplay_Screen_1_Player_C="\"Object\" "
-UserWidget="\"Object\" "
-VerticalBox="\"Object\" "
+UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
-Main_Menu_C="\"Object\" "
+Main_Menu_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
+Settings_Menu_Title_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -797,6 +827,10 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/UI/Gameplay_Screen_1_Player.Gameplay_Screen_1_Player=0
 /Game/UI/Settings_Menu.Settings_Menu=0
 /Game/UI/Main_Menu.Main_Menu=0
+/Game/UI/Game_Mode_Data/Players.Players=1
+/Game/UI/Game_Mode_Data/Gamemode.Gamemode=0
+/Game/UI/Game_Mode_Data/Difficulty.Difficulty=0
+/Game/UI/Game_Mode_Data/Card_Pack.Card_Pack=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2218,6 +2252,7 @@ HorizontalBox.Accessibility=False
 HorizontalBox.Behavior=False
 VerticalBox.Behavior=False
 TextBlock.Localization=False
+UserDefinedEnum.Enumerators=False
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
