--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -130,6 +130,9 @@ LastExecutedLaunchName=LOGANS
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowWidth=1914
+NewWindowHeight=992
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -185,6 +188,13 @@ Settings_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Col
 Main_Menu_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_VariableSet=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+Set audio Badges=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_ImageCard_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_EndGame_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+WBP_Easy_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_CallFunction=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_FunctionEntry=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+Set Image Badges=
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -192,12 +202,16 @@ LastLevel=/Engine/Maps/Templates/OpenWorld
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
@@ -214,33 +228,34 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SpriteEditor
-OpenAssetsAtExit=/Game/UI/Gameplay_Screen_1_Player.Gameplay_Screen_1_Player
-OpenAssetsAtExit=/Game/UI/Settings_Menu.Settings_Menu
-OpenAssetsAtExit=/Game/UI/Main_Menu.Main_Menu
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem1=/Game/UI/Game_Mode_Data/Difficulty
-MRUItem2=/Game/UI/Game_Mode_Data/Players
-MRUItem3=/Game/UI/Game_Mode_Data/Gamemode
-MRUItem4=/Game/UI/Settings_Menu_Title
-MRUItem5=/Game/UI/Main_Menu
-MRUItem6=/Game/UI/Settings_Menu
-MRUItem7=/Game/UI/Gameplay_Screen_1_Player
-MRUItem8=/Game/UI/UI_Assets/Slider_Button
-MRUItem9=/Game/CardPlayer
-MRUItem10=/Game/Untitled
-MRUItem11=/Game/UI/UI_Assets/Card_UI_Icon
-MRUItem12=/Game/UI/UI_Assets/Pause_Button
-MRUItem13=/Game/UI/UI_Assets/Gameplay_Background_v6
-MRUItem14=/Game/INputs
-MRUItem15=/Game/Interact
-MRUItem16=/Game/Materials/red
-MRUItem17=/Game/Materials/ColourBase
-MRUItem18=/Game/CardType
-MRUItem19=/Game/CardGM
-MRUItem20=/Game/Card
-MRUItem21=/Game/NewPaperSprite
+MRUItem0=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy
+MRUItem2=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem3=/Game/MemoryGame/Blueprints/Setup/WBP_OptionButton
+MRUItem4=/Game/UI/Main_Menu
+MRUItem5=/Game/UI/Gameplay_Screen_1_Player
+MRUItem6=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem7=/Game/UI/Game_Mode_Data/Difficulty
+MRUItem8=/Game/UI/Game_Mode_Data/Players
+MRUItem9=/Game/UI/Game_Mode_Data/Gamemode
+MRUItem10=/Game/UI/Settings_Menu_Title
+MRUItem11=/Game/UI/Settings_Menu
+MRUItem12=/Game/UI/UI_Assets/Slider_Button
+MRUItem13=/Game/CardPlayer
+MRUItem14=/Game/Untitled
+MRUItem15=/Game/UI/UI_Assets/Card_UI_Icon
+MRUItem16=/Game/UI/UI_Assets/Pause_Button
+MRUItem17=/Game/UI/UI_Assets/Gameplay_Background_v6
+MRUItem18=/Game/INputs
+MRUItem19=/Game/Interact
+MRUItem20=/Game/Materials/red
+MRUItem21=/Game/Materials/ColourBase
+MRUItem22=/Game/CardType
+MRUItem23=/Game/CardGM
+MRUItem24=/Game/Card
+MRUItem25=/Game/NewPaperSprite
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -689,6 +704,117 @@ MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 K2Node_VariableSet.Events=True
 Main_Menu_C.Default=True
+WBP_Easy_C.Images to Guess=True
+WBP_Easy_C.Option Buttons=True
+WBP_Easy_C.Game Setup=True
+WBP_Easy_C.Image Cards=True
+WBP_Easy_C.Clue Setup=True
+WBP_Easy_C.Point Setup=True
+WBP_Easy_C.Tries Setup=True
+WBP_Easy_C.Input=True
+WBP_Easy_C.Appearance=True
+WBP_Easy_C.Interaction=True
+WBP_Easy_C.Designer=True
+WBP_Easy_C.Performance=True
+WBP_Easy_C.Layout=True
+WBP_Easy_C.Behavior=True
+WBP_Easy_C.Render Transform=True
+WBP_Easy_C.Localization=True
+WBP_Easy_C.Accessibility=True
+WBP_Easy_C.Rendering=True
+WBP_Easy_C.Navigation=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+WBP_ImageCard_C.Setup=True
+WBP_ImageCard_C.Default=True
+WBP_ImageCard_C.Appearance=True
+WBP_ImageCard_C.Input=True
+WBP_ImageCard_C.Interaction=True
+WBP_ImageCard_C.Designer=True
+WBP_ImageCard_C.Performance=True
+WBP_ImageCard_C.Layout=True
+WBP_ImageCard_C.Behavior=True
+WBP_ImageCard_C.Render Transform=True
+WBP_ImageCard_C.Localization=True
+WBP_ImageCard_C.Accessibility=True
+WBP_ImageCard_C.Rendering=True
+WBP_ImageCard_C.Navigation=True
+WBP_ImageCard_C.Events=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Rendering=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+AudioTextBox_C.Layout=True
+AudioTextBox_C.Appearance=True
+AudioTextBox_C.Accessibility=True
+AudioTextBox_C.Input=True
+AudioTextBox_C.Interaction=True
+AudioTextBox_C.Performance=True
+AudioTextBox_C.Behavior=True
+AudioTextBox_C.Render Transform=True
+AudioTextBox_C.Rendering=True
+AudioTextBox_C.Navigation=True
+AudioTextBox_C.Localization=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+WBP_EndGame_C.Option Buttons=True
+WBP_EndGame_C.Input=True
+WBP_EndGame_C.End Game Setup=True
+WBP_EndGame_C.End Game Messages=True
+WBP_EndGame_C.Game Setup=True
+WBP_EndGame_C.Appearance=True
+WBP_EndGame_C.Interaction=True
+WBP_EndGame_C.Designer=True
+WBP_EndGame_C.Performance=True
+WBP_EndGame_C.Layout=True
+WBP_EndGame_C.Behavior=True
+WBP_EndGame_C.Render Transform=True
+WBP_EndGame_C.Localization=True
+WBP_EndGame_C.Accessibility=True
+WBP_EndGame_C.Rendering=True
+WBP_EndGame_C.Navigation=True
+WBP_OptionButton_C.Default=True
+WBP_OptionButton_C.Appearance=True
+WBP_OptionButton_C.Input=True
+WBP_OptionButton_C.Interaction=True
+WBP_OptionButton_C.Designer=True
+WBP_OptionButton_C.Performance=True
+WBP_OptionButton_C.Layout=True
+WBP_OptionButton_C.Behavior=True
+WBP_OptionButton_C.Render Transform=True
+WBP_OptionButton_C.Localization=True
+WBP_OptionButton_C.Accessibility=True
+WBP_OptionButton_C.Rendering=True
+WBP_OptionButton_C.Navigation=True
+WrapBox.Layout=True
+WrapBox.Content Layout=True
+WrapBox.Accessibility=True
+WrapBox.Behavior=True
+WrapBox.Render Transform=True
+WrapBox.Performance=True
+WrapBox.Rendering=True
+WrapBox.Navigation=True
+WrapBox.Localization=True
+PanelWidget.Behavior=True
+PanelWidget.Accessibility=True
+PanelWidget.Render Transform=True
+PanelWidget.Performance=True
+PanelWidget.Rendering=True
+PanelWidget.Navigation=True
+PanelWidget.Localization=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -723,7 +849,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI/Game_Mode_Data
+ContentBrowserDrawer.SelectedPaths=/Game/Sound
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -748,7 +874,7 @@ PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 ActorComponent="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CardPlayer_C=
 Character=
 Pawn=
@@ -779,15 +905,15 @@ CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderT
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-Gameplay_Screen_1_Player_C="\"Object\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Gameplay_Screen_1_Player_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
@@ -795,6 +921,13 @@ Main_Menu_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderT
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
 Settings_Menu_Title_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_Easy_C="\"Object\" "
+WBP_ImageCard_C="\"Object\" "
+Border="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+AudioTextBox_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_EndGame_C="\"Object\" "
+WBP_OptionButton_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WrapBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -824,13 +957,17 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/UI/Gameplay_Screen.Gameplay_Screen=0
 /Temp/Untitled_1.Untitled_1:PersistentLevel.Untitled=0
 /Game/UI/UI_Assets/Slider_Button.Slider_Button=0
-/Game/UI/Gameplay_Screen_1_Player.Gameplay_Screen_1_Player=0
+/Game/UI/Gameplay_Screen_1_Player.Gameplay_Screen_1_Player=1
 /Game/UI/Settings_Menu.Settings_Menu=0
 /Game/UI/Main_Menu.Main_Menu=0
 /Game/UI/Game_Mode_Data/Players.Players=1
 /Game/UI/Game_Mode_Data/Gamemode.Gamemode=0
 /Game/UI/Game_Mode_Data/Difficulty.Difficulty=0
 /Game/UI/Game_Mode_Data/Card_Pack.Card_Pack=1
+/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy.WBP_Easy=1
+/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard=1
+/Game/MemoryGame/Blueprints/Setup/WBP_OptionButton.WBP_OptionButton=1
+/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame.WBP_EndGame=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1052,9 +1189,9 @@ bDrawGrid=False
 PrimType=1
 
 [RootWindow]
-ScreenPosition=X=637.000 Y=0.000
+ScreenPosition=X=2373.000 Y=155.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2149,8 +2286,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Programs/Unreal/UE 5.3/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Programs/Unreal/UE 5.3/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Audio=False
@@ -2165,6 +2302,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
