End game now works for the wbp easy mode blueprimnt

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=0,Y=0)
+NewWindowPosition=(X=0,Y=6)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -131,8 +131,8 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
-NewWindowHeight=992
-MultipleInstancePositions=(X=0,Y=0)
+NewWindowHeight=986
+MultipleInstancePositions=(X=0,Y=6)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -195,6 +195,8 @@ WBP_Easy_C=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collisio
 K2Node_CallFunction=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_FunctionEntry=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 Set Image Badges=
+K2Node_MacroInstance=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_Variable=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -228,14 +230,15 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SpriteEditor
+OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy.WBP_Easy
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy
-MRUItem2=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
-MRUItem3=/Game/MemoryGame/Blueprints/Setup/WBP_OptionButton
-MRUItem4=/Game/UI/Main_Menu
-MRUItem5=/Game/UI/Gameplay_Screen_1_Player
+MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy
+MRUItem1=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem2=/Game/UI/Gameplay_Screen_1_Player
+MRUItem3=/Game/UI/Main_Menu
+MRUItem4=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem5=/Game/MemoryGame/Blueprints/Setup/WBP_OptionButton
 MRUItem6=/Game/UI/Game_Mode_Data/Card_Pack
 MRUItem7=/Game/UI/Game_Mode_Data/Difficulty
 MRUItem8=/Game/UI/Game_Mode_Data/Players
@@ -815,6 +818,32 @@ PanelWidget.Performance=True
 PanelWidget.Rendering=True
 PanelWidget.Navigation=True
 PanelWidget.Localization=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.PathTracing=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.WorldPartition=True
+StaticMeshActor.Actor=True
+WBP_OptionButton_C.Events=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+WBP_Easy_C.Default=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -849,7 +878,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Sound
+ContentBrowserDrawer.SelectedPaths=/Game/MemoryGame/Blueprints/GameTemplate
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -874,7 +903,7 @@ PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 ActorComponent="\"Object\" "
-Object="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" "
 CardPlayer_C=
 Character=
 Pawn=
@@ -903,8 +932,8 @@ Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -912,12 +941,12 @@ HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Lay
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Gameplay_Screen_1_Player_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
-Main_Menu_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Main_Menu_C="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
 Settings_Menu_Title_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1191,7 +1220,7 @@ PrimType=1
 [RootWindow]
 ScreenPosition=X=2373.000 Y=155.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
