--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=986)
 LastExecutedLaunchDevice=Windows@LOGANS
 LastExecutedLaunchName=LOGANS
 LastExecutedPIEPreviewDevice=
@@ -197,6 +197,7 @@ K2Node_FunctionEntry=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collisio
 Set Image Badges=
 K2Node_MacroInstance=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 K2Node_Variable=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
+K2Node_FunctionResult=CardPlayer_C.Physics.ConstraintsGroup,CardPlayer_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.Player Number,K2Node_VariableGet.DefaultValueCategory.Player Number
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -204,6 +205,8 @@ LastLevel=/Engine/Maps/Templates/OpenWorld
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -230,35 +233,40 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SpriteEditor
+OpenAssetsAtExit=/Game/UI/Clock_WB.Clock_WB
+OpenAssetsAtExit=/Game/UI/Gameplay_Screen_1_Player.Gameplay_Screen_1_Player
 OpenAssetsAtExit=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy.WBP_Easy
+OpenAssetsAtExit=/Game/UI/WBP_Clock.WBP_Clock
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy
-MRUItem1=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem0=/Game/UI/WBP_Clock
+MRUItem1=/Game/MemoryGame/Blueprints/GameTemplate/WBP_Easy
 MRUItem2=/Game/UI/Gameplay_Screen_1_Player
-MRUItem3=/Game/UI/Main_Menu
-MRUItem4=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
-MRUItem5=/Game/MemoryGame/Blueprints/Setup/WBP_OptionButton
-MRUItem6=/Game/UI/Game_Mode_Data/Card_Pack
-MRUItem7=/Game/UI/Game_Mode_Data/Difficulty
-MRUItem8=/Game/UI/Game_Mode_Data/Players
-MRUItem9=/Game/UI/Game_Mode_Data/Gamemode
-MRUItem10=/Game/UI/Settings_Menu_Title
-MRUItem11=/Game/UI/Settings_Menu
-MRUItem12=/Game/UI/UI_Assets/Slider_Button
-MRUItem13=/Game/CardPlayer
-MRUItem14=/Game/Untitled
-MRUItem15=/Game/UI/UI_Assets/Card_UI_Icon
-MRUItem16=/Game/UI/UI_Assets/Pause_Button
-MRUItem17=/Game/UI/UI_Assets/Gameplay_Background_v6
-MRUItem18=/Game/INputs
-MRUItem19=/Game/Interact
-MRUItem20=/Game/Materials/red
-MRUItem21=/Game/Materials/ColourBase
-MRUItem22=/Game/CardType
-MRUItem23=/Game/CardGM
-MRUItem24=/Game/Card
-MRUItem25=/Game/NewPaperSprite
+MRUItem3=/Game/UI/Clock_WB
+MRUItem4=/Game/MemoryGame/Blueprints/EndGame/WBP_EndGame
+MRUItem5=/Game/UI/Main_Menu
+MRUItem6=/Game/MemoryGame/Blueprints/Setup/WBP_ImageCard
+MRUItem7=/Game/MemoryGame/Blueprints/Setup/WBP_OptionButton
+MRUItem8=/Game/UI/Game_Mode_Data/Card_Pack
+MRUItem9=/Game/UI/Game_Mode_Data/Difficulty
+MRUItem10=/Game/UI/Game_Mode_Data/Players
+MRUItem11=/Game/UI/Game_Mode_Data/Gamemode
+MRUItem12=/Game/UI/Settings_Menu_Title
+MRUItem13=/Game/UI/Settings_Menu
+MRUItem14=/Game/UI/UI_Assets/Slider_Button
+MRUItem15=/Game/CardPlayer
+MRUItem16=/Game/Untitled
+MRUItem17=/Game/UI/UI_Assets/Card_UI_Icon
+MRUItem18=/Game/UI/UI_Assets/Pause_Button
+MRUItem19=/Game/UI/UI_Assets/Gameplay_Background_v6
+MRUItem20=/Game/INputs
+MRUItem21=/Game/Interact
+MRUItem22=/Game/Materials/red
+MRUItem23=/Game/Materials/ColourBase
+MRUItem24=/Game/CardType
+MRUItem25=/Game/CardGM
+MRUItem26=/Game/Card
+MRUItem27=/Game/NewPaperSprite
 
 [DetailCategories]
 CardPlayer_C.TransformCommon=True
@@ -844,6 +852,34 @@ K2Node_Tunnel.Graph=True
 K2Node_Tunnel.Inputs=True
 K2Node_Tunnel.Outputs=True
 WBP_Easy_C.Default=True
+Clock_WB_C.Default=True
+Clock_WB_C.Appearance=True
+Clock_WB_C.Input=True
+Clock_WB_C.Interaction=True
+Clock_WB_C.Designer=True
+Clock_WB_C.Performance=True
+Clock_WB_C.Layout=True
+Clock_WB_C.Behavior=True
+Clock_WB_C.Render Transform=True
+Clock_WB_C.Localization=True
+Clock_WB_C.Accessibility=True
+Clock_WB_C.Rendering=True
+Clock_WB_C.Navigation=True
+WBP_Clock_C.Appearance=True
+WBP_Clock_C.Input=True
+WBP_Clock_C.Interaction=True
+WBP_Clock_C.Designer=True
+WBP_Clock_C.Performance=True
+WBP_Clock_C.Layout=True
+WBP_Clock_C.Behavior=True
+WBP_Clock_C.Render Transform=True
+WBP_Clock_C.Localization=True
+WBP_Clock_C.Accessibility=True
+WBP_Clock_C.Rendering=True
+WBP_Clock_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -878,7 +914,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/MemoryGame/Blueprints/GameTemplate
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -903,7 +939,7 @@ PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \
 NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" "
 ActorComponent="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CardPlayer_C=
 Character=
 Pawn=
@@ -932,16 +968,16 @@ Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.Brush.OutlineSettings.Color\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.StrikeBrush.OutlineSettings.Color\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Gameplay_Screen_1_Player_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object\" "
+ContentWidget="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Gameplay_Screen_1_Player_C="\"Object\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Settings_Menu_C="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -950,13 +986,15 @@ Main_Menu_C="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
 Settings_Menu_Title_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-WBP_Easy_C="\"Object\" "
+WBP_Easy_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_ImageCard_C="\"Object\" "
 Border="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 AudioTextBox_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_EndGame_C="\"Object\" "
 WBP_OptionButton_C="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WrapBox="\"Object\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Clock_WB_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WBP_Clock_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Card.Card;
@@ -986,7 +1024,7 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/UI/Gameplay_Screen.Gameplay_Screen=0
 /Temp/Untitled_1.Untitled_1:PersistentLevel.Untitled=0
 /Game/UI/UI_Assets/Slider_Button.Slider_Button=0
-/Game/UI/Gameplay_Screen_1_Player.Gameplay_Screen_1_Player=1
+/Game/UI/Gameplay_Screen_1_Player.Gameplay_Screen_1_Player=0
 /Game/UI/Settings_Menu.Settings_Menu=0
 /Game/UI/Main_Menu.Main_Menu=0
 /Game/UI/Game_Mode_Data/Players.Players=1
@@ -997,6 +1035,8 @@ PerWorldEditorSettings=(("/Game/Untitled.Untitled", (LoadedEditorRegions=((Min=(
 /Game/MemoryGame/Blueprints/Setup/WBP_ImageCard.WBP_ImageCard=1
 /Game/MemoryGame/Blueprints/Setup/WBP_OptionButton.WBP_OptionButton=1
 /Game/MemoryGame/Blueprints/EndGame/WBP_EndGame.WBP_EndGame=1
+/Game/UI/Clock_WB.Clock_WB=1
+/Game/UI/WBP_Clock.WBP_Clock=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2319,7 +2359,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 RecentsFiles=D:/Programs/Unreal/UE 5.3/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
-Audio=False
+Audio=True
 Editor=False
 Input=False
 Lists=False
